--- a/DSAA/dsaa.tex
+++ b/DSAA/dsaa.tex
@@ -404,7 +404,7 @@ There are many directions to extend this work with the motivation of improving o
 %For example, some special value of the hyperparameters, of the non-parametric priors, could lead to a very large number of classes or, at the opposite, just one class. Between these two extremes, that goes from a vanishing local aspect of the degree distribution to a number of classes that overfit the data, on can ask how this parameter affect the global and the local degree distribution of a random graph.  
 For instance, a fundamental result is the Aldous-Hoover theorem, which implies that exchangeable random graphs cannot be sparse \cite{orbanz2015bayesian}. It seems that the sparsity is related in some way to the preferential attachment in a network. Thus, the following question arises: would it be realistic to assume the exchangeability hypothesis for the local case but not for the global case, and how this fact impacts the burstiness of the global degree distribution and the sparsity of the graph.
 
-We believe that answering to those questions open a way to  developing and designing Bayesian models able to better capture the fundamental properties of  real social networks.
+We believe that answering to those questions open a way to develop and design Bayesian models able to better capture the fundamental properties of  real social networks.
 
 ~\\
 
