--- a/DSAA/a.bib
+++ b/DSAA/a.bib
@@ -55,7 +55,7 @@
 @inproceedings{gorur06,
   title={A choice model with infinitely many latent features},
   author={G{\"o}r{\"u}r, Dilan and J{\"a}kel, Frank and Rasmussen, Carl Edward},
-  booktitle={Proceedings of the 23rd international conference on Machine learning},
+  booktitle={Proceedings of the 23rd International Conference on Machine learning},
   pages={361--368},
   year={2006},
   organization={ACM}
@@ -204,7 +204,7 @@ publisher={JSTOR}
 @inproceedings{LeskovecBKT08,
   title={Microscopic evolution of social networks},
   author={Leskovec, Jure and Backstrom, Lars and Kumar, Ravi and Tomkins, Andrew},
-  booktitle={Proceedings of the 14th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  booktitle={Proceedings of the 14th ACM SIGKDD International Conference on Knowledge discovery and data mining},
   pages={462--470},
   year={2008},
   organization={ACM}
@@ -527,7 +527,7 @@ publisher={JSTOR}
 @inproceedings{Ciglan2013,
   title={On community detection in real-world networks and the importance of degree assortativity},
   author={Ciglan, Marek and Laclav{\'\i}k, Michal and N{\o}rv{\aa}g, Kjetil},
-  booktitle={Proceedings of the 19th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  booktitle={Proceedings of the 19th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
   pages={1007--1015},
   year={2013},
   organization={ACM}
