--- a/long_version/a.bib
+++ b/long_version/a.bib
@@ -23,6 +23,14 @@
     booktitle = {Proceedings of the 29th International Conference on Machine Learning, {ICML} 2012, Edinburgh, Scotland, UK, June 26 - July 1, 2012},
     year      = {2012},
 }
+@inproceedings{ICML2012Palla_785,
+    Publisher = {ACM},
+    Title = {An Infinite Latent Attribute Model for Network Data},
+    Booktitle = {Proceedings of the 29th International Conference on Machine Learning},
+    Author = {Konstantina Palla and Zoubin Ghahramani and David A. Knowles},
+    Year = {2012},
+    Pages = {1607--1614}
+} 
 
 @inproceedings{ILFRM, crossref = {miller2009nonparametric} }
 @inproceedings{miller2009nonparametric,
@@ -143,15 +151,12 @@
   pages={48--53},
   year={2008}
 }
-@article{diMMSB, crossref = {fan2015dynamic} }
 @article{fan2015dynamic,
-  title={Dynamic Infinite Mixed-Membership Stochastic Blockmodel},
-  author={Fan, Xuhui and Cao, Longbing and Xu, Da and Yi, Richard},
-  journal={Neural Networks and Learning Systems, IEEE Transactions on},
-  volume={26},
-  pages={2072--2085},
-  year={2015},
-  publisher={IEEE}
+    author    = {Xuhui Fan and Longbing Cao and Richard Yi Da Xu},
+    title     = {Dynamic Infinite Mixed-Membership Stochastic Blockmodel},
+    journal   = {CoRR},
+    volume    = {abs/1306.2999},
+    year      = {2013},
 }
 @INPROCEEDINGS{ferguson_dp, crossref = {ferguson1973bayesian} }
 @article{ferguson1973bayesian,
@@ -197,18 +202,13 @@ publisher={JSTOR}
 
 %%% From Christine pp.
 @inproceedings{LeskovecBKT08,
-  author    = {Jure Leskovec and
-               Lars Backstrom and
-               Ravi Kumar and
-               Andrew Tomkins},
-  title     = {Microscopic evolution of social networks},
-  booktitle = {Proceedings of the 14th International Conference on
-               Knowledge Discovery and Data Mining, Las Vegas, Nevada, USA, August
-               24-27, 2008},
-  pages     = {462--470},
-  year      = {2008},
+  title={Microscopic evolution of social networks},
+  author={Leskovec, Jure and Backstrom, Lars and Kumar, Ravi and Tomkins, Andrew},
+  booktitle={Proceedings of the 14th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={462--470},
+  year={2008},
+  organization={ACM}
 }
-
 @proceedings{DBLP:conf/kdd/2008,
   editor    = {Ying Li and
                Bing Liu and
@@ -294,6 +294,9 @@ publisher={JSTOR}
   pages={18--66},
   year={1954}
 }
+
+
+
 @inproceedings{la2010randomization,
  author = {La Fond, Timothy and Neville, Jennifer},
  title = {Randomization Tests for Distinguishing Social Influence and Homophily Effects},
@@ -346,7 +349,6 @@ publisher={JSTOR}
     pages={14534--14539},
     year={2013},
 }
-@INPROCEEDINGS{MMM, crossref = {airoldi2014handbook} }
 @book{airoldi2014handbook,
     title={Handbook of Mixed Membership Models and Their Applications},
     author={Airoldi, Edoardo M and Blei, David and Erosheva, Elena A and Fienberg, Stephen E},
@@ -482,4 +484,86 @@ publisher={JSTOR}
     year={2009},
     publisher={National Acad Sciences}
 }
+@inproceedings{Li11,
+  title={Generalized latent factor models for social network analysis},
+  author={Li, Wu-Jun and Yeung, Dit-Yan and Zhang, Zhihua},
+  booktitle={Proceedings of the 22nd International Joint Conference on Artificial Intelligence (IJCAI), Barcelona, Spain},
+  pages={1705},
+  year={2011}
+}
 
+@inproceedings{Lee2015,
+  author    = {Jay Lee and
+               Manzil Zaheer and
+               Stephan G{\"{u}}nnemann and
+               Alexander J. Smola},
+  title     = {Preferential Attachment in Graphs with Affinities},
+  booktitle = {Proceedings of the Eighteenth International Conference on Artificial
+               Intelligence and Statistics, {AISTATS} 2015, San Diego, California,
+               USA, May 9-12, 2015},
+  year      = {2015},
+  url       = {http://jmlr.org/proceedings/papers/v38/lee15b.html},
+}
+@article{Zeng2016,
+    author = {Zeng, Shan},
+    journal = {Physica A: Statistical Mechanics and its Applications},
+    title = {Link prediction based on local information considering preferential attachment},
+    volume = {443},
+        pages = {537-542},
+    year = {2016}
+}
+@inproceedings{Zhang2016,
+  author    = {Hongyi Zhang and
+               Tong Zhao and
+               Irwin King and
+               Michael R. Lyu},
+  title     = {Modeling the Homophily Effect between Links and Communities for Overlapping
+               Community Detection},
+  booktitle = {Proceedings of the Twenty-Fifth International Joint Conference on
+               Artificial Intelligence, {IJCAI}},
+  pages     = {3938--3944},
+  year      = {2016},
+} 
+@inproceedings{Ciglan2013,
+  title={On community detection in real-world networks and the importance of degree assortativity},
+  author={Ciglan, Marek and Laclav{\'\i}k, Michal and N{\o}rv{\aa}g, Kjetil},
+  booktitle={Proceedings of the 19th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={1007--1015},
+  year={2013},
+  organization={ACM}
+}
+@article{Largeron2017,
+  author = {C. Largeron and P. N. Mougel and O.  Benyahia and O. R. Zaïane},
+  journal = {Knowl Inf Syst},
+  title = {DANCer: dynamic attributed networks with community structure generation},
+  pages = {1-43},
+  year = {2017},
+} 
+@article{Buckley2001,
+  author = {P. G. Buckley and D. Osthus},
+  journal = {Discrete Mathematics},
+  pages = {53-68},
+  title = {Popularity based random graph models leading to a scale-free degree sequence},
+  volume = {282},
+  year = {2001}
+} 
+
+@article{Kim2012,
+  author    = {Myunghwan Kim and
+               Jure Leskovec},
+  title     = {Multiplicative Attribute Graph Model of Real-World Networks},
+  journal   = {Internet Mathematics},
+  volume    = {8},
+  number    = {1-2},
+  pages     = {113--160},
+  year      = {2012},
+} 
+@article{Aiello2012,
+ author = {Aiello, Luca Maria and Barrat, Alain and Schifanella, Rossano and Cattuto, Ciro and Markines, Benjamin and Menczer, Filippo},
+ title = {Friendship Prediction and Homophily in Social Media},
+ journal = {ACM Trans. Web},
+ volume = {6},
+ number = {2},
+ year = {2012},
+ pages = {1--33},
+} 
