--- a/JASA/content/preferential.tex
+++ b/JASA/content/preferential.tex
@@ -166,12 +166,13 @@ In the generative context $\M_g$, we want to characterize the burstiness of glob
 
     (1) under the following constraints :
 
-    \begin{itemize}
-    \item $ \lambda_1 < \frac{c_k-1}{c_k+1}$
-    \item $ n < n_1$
-    \end{itemize}
-    $n_1 = \frac{-3a + \sqrt{a(4c_k(a-b)+5a-4b)}}{2a}$
-    with $a = 1/(\lambda_1+\lambda_0)$ and $\lambda_1 / (\lambda_0+\lambda_0)$.
+    to validate...
+    %\begin{itemize}
+    %\item $ \lambda_1 < \frac{c_k-1}{c_k+1}$
+    %\item $ n < n_1$
+    %\end{itemize}
+    %$n_1 = \frac{-3a + \sqrt{a(4c_k(a-b)+5a-4b)}}{2a}$
+    %with $a = 1/(\lambda_1+\lambda_0)$ and $\lambda_1 / (\lambda_0+\lambda_0)$.
     
 \end{proposition}
 
