--- a/JASA/jasa.tex
+++ b/JASA/jasa.tex
@@ -124,13 +124,12 @@ We assess here whether standard stochastic mixed membership models are adapted f
 %\section{Generative Context -- $M_g$}
 %    \input{content/mg_extension} % burtisness only
 %    \input{content/mg_illustration}
-%\input{content/concl.tex}
+\input{content/concl.tex}
 
 ~\\
 
 
 \bibliographystyle{chicago}
-%\bibliographystyle{unsrt}
 \bibliography{./a}
 
 \appendix
