--- a/JASA/appendix.tex
+++ b/JASA/appendix.tex
@@ -4,17 +4,17 @@
 for a given distribution $P$ under a model $M_g$ one has : 
 if a distribution $P$ is bursty in $\M_g$ : one has
 \begin{equation*}
-    p(y \geq n+1 | y \geq n, \M_g) = \int_{\M_e} P(y \geq n+1 | y \geq, \M_e) P(\M_e) d\M_e
+    p(y \geq n+1 | y \geq n, \M_g) = \int_{\M_e} P(y \geq n+1 | y \geq n, \M_e) P(\M_e) d\M_e
 \end{equation*}
 
-Let's denote the discrete derivate of a fonction $f$  as $\Delta_n f(n) = f(n+1) -f(n)$.
+Let's denote the discrete derivate of a function $f$  as $\Delta_n f(n) = f(n+1) -f(n)$.
 
 Concerning the burstiness of $P$ one has : 
 \begin{equation}
     \Delta_n P(y \geq n+1 | y \geq n, \M_g) = \int_{\M_e}\Delta_n P(y \geq n+1 | y \geq n, \M_e) P(\M_e)d\M_e
 \end{equation}
 
-As $P(\M_e)$ is stricly positive, the proposition is straitforward.
+As $P(\M_e)$ is strictly positive, the proposition is straightforward.
 \end{proof}
 
 
@@ -22,31 +22,38 @@ As $P(\M_e)$ is stricly positive, the proposition is straitforward.
 \begin{proof}[Proof of proposition \ref{th:ldegree_exp_me}]
 For IMMSB : ~\\
 
-one as 
+One as 
 $D_{ik} = \sum_{j\in\mathcal{V}} \hat f_{ik} \hat \phi_{kk} \hat f_{jk} = \hat f_{ik} \sum_{j\in\mathcal{V}} \hat \phi_{kk} \hat f_{jk}$
 
 And from $DP$ property on has
 $P(\hat f_{ik} \geq x' + \epsilon | \hat f_{ik} \geq x', \M_e)$ is increasing with $x'$
 
-Setting $x = x' (\sum_{j\in\mathcal{V}})$ one as that $P(D_{ik} \geq x + \epsilon | D_{ik} \geq x, \M_e)$ is increasing with $x$ since $\sum_{j\in \mathcal{V}} \hat \phi_{kk} \hat f_{jk}$ is positive and independat of $i$. (\textcolor{red}{but it depend on $k$ ?})
+Setting $x = x' (\sum_{j\in\mathcal{V}})$ one as that $P(D_{ik} \geq x + \epsilon | D_{ik}
+    \geq x, \M_e)$ is increasing with $x$ since $\sum_{j\in \mathcal{V}} \hat \phi_{kk}
+    \hat f_{jk}$ is positive and independent of $i$. (\textcolor{red}{but it depends on
+    $k$ ?})
 
 
 For ILFM :~\\
 
- let $C_{i,k} = |\{j \in V, \hat{f}_{jk} = \hat{f}_{ik} = 1\}|$. As the factor matrix is binary, one has:
+ let $C_{i,k} = |\{j \in V, \hat{f}_{jk} = \hat{f}_{ik} = 1\}|$. As the factor matrix is
+    binary, one has:
 %
 \[ 
 d_{i,k} = \sum_{j\in V} \sigma(\hat{f}_{ik} \hat{\Phi}_{kk} \hat{f}_{jk}) =  C_{i,k} (\sigma(\hat{\Phi}_{kk})-0.5) + \frac{N}{2}
 \]
 %
-As $\hat{f}_{ik}$ is binary, there is no positive reinforcement effect: $C_{i,k}$ does not increase if $\hat{f}_{ik}=1$, thus ILFM does not satisfy local preferential attachment.
+As $\hat{f}_{ik}$ is binary, there is no positive reinforcement effect: $C_{i,k}$ does not
+    increase if $\hat{f}_{ik}=1$, thus ILFM does not satisfy local preferential
+    attachment.
 \end{proof}
 
-
-
+%%%%%%%%%%%%%%
+%%% Feature Burstiness, MMSB/ILFM, Me
+%%%%%%%%%%%%%%
 \begin{proof}[Proof of proposition \ref{th:feature_exp_me}]
 
-For IMMS : ~\\
+For IMMSB : ~\\
 
 one has $C_k = \sum_{i,j \in V^2} \hat f_{ik} \hat f_{jk}$
 From the reinforcement of the DP process $C_k$ is bursty over $\M_e$.
@@ -57,39 +64,110 @@ one has $C_k = \sum_{i \in V} \hat f_{ik}$
 From the reinforcement of the IBP process $C_k$ is bursty over $\M_e$.
 \end{proof}
 
-\begin{proof}[Proof if proposition \ref{th:ldgree_mg}]
-Assumiong exchangeability in  $\M_g$ on and that the $c_k$ relation that occurs in the class $k$.
+
+
+%%%%%%%%%%%%%%
+%%% Local Preferential Attachment, MMSB, Mg.
+%%%%%%%%%%%%%%
+\begin{proof}[Proof if proposition \ref{th:ldegree_mg}]
+    Assuming exchangeability in $\M_g$ and that we have $c_k$ relation that occurs in the
+    class $k$. The probability to observe a local degree $d_{ik}$ equal to $n$ can be written as the
+    union of all sequence of relations that will have $n$ edges :
 
 \begin{equation}
-P(d_{ik}=n | \M_g) = P( \cup I_k, \cup I_r)
+    P(d_{ik}=n | \M_g) = P( \cup I_{k,n}, \cup I_{r,*})
 \end{equation}
 
-where $I_k$ represent the union of all sequnce of relation in the class $k$ where $d_{ik} = n$, where $I_r$ represent the union of ial sequences of relation outside the class $k$. Given $c_k$ and the exchangeability asumptions one has : 
+Where $I_{k,n}$ represents the union of all sequences of relations in the class $k$ where
+    $d_{ik} = n$, and  $I_{r,*}$ the union of all sequences of relations outside the class
+    $k$ regardless of the node degrees. 
+
+Because we assume that $c_k$ is know, the size of the class $k$k is hold constant, the
+    relation inside the class $k$ only, do not depend of relation outside this class, then
+    the sequences of relation inside $k$ and outside $k$ are independent : 
+
+    \begin{equation}
+        P(d_{ik}=n | \M_g) = P( \cup I_{k,n}) P( \cup I_{r,*})
+    \end{equation}
+    
+    From the exchangeability assumptions \textcolor{red}{Actually the exchangeability for
+    the sequences in the local case, should be proved also, as I am not sure that the
+    following statement is trivially true : "\emph{In a HDP, the distributions of the
+    sequences limited to only one component (one class) are exchangeable}" ?}, all the
+    sequence that have the same number of edges have the same outcome probability. One can
+    write : 
 
 \begin{equation}
-P(d_{ik}=n | \M_g) = p(\cup I_r) \dbinom{c_k}{n} P( (y_{i0, k}=1,..,  y_{in, k}=1, y_{i(n+1), k}=0,...,y_{i(c_k), k}=0) | \M_g)
+P(d_{ik}=n | \M_g) = p(\cup I_r) \dbinom{c_k}{n} P( (y_{i0, k}=1,..,  y_{in, k}=1,
+    y_{i(n+1), k}=0,...,y_{i(c_k), k}=0) | \M_g)
 \end{equation}
 
-Applying product rule, one has the following : 
-\begin{equation}
-\frac{P(d_{ik} = n+1)}{P(d_{ik} = n)} = \frac{c_k - n}{n+1} p(y_{ij}=1 | Y_i^{-ij, \M_g})
+Applying product rule, one has the following for any node $j$ : 
+\begin{equation} \label{eq:bb1}
+    \frac{P(d_{ik} = n+1)}{P(d_{ik} = n)} = \frac{c_k - n}{n+1} \frac{P(y_{ij,k}=1
+    | Y_i^{-ij}, \M_g)}{P(y_{ij,k}=0 | Y_i^{-ij}, \M_g)}
 \end{equation}
 
-Finally from the bernoulli-beta kernem in IMMSN, one has : 
-\begin{equation}
-p(y_{ij}=1 | Y_i^{-ij, \M_g}) = \frac{n+ \lambda_1}{C_k + \lambda_1 + \lambda_0}
+Where $Y^{-ij}$ denote any sequence of relations between node $i$ and nodes  in $j \in \{0,1,..,j-1, j+1, N-1\}$,
+such that the sequence of relations contains $n$ edges in the class $k$.
+
+From the bernoulli-beta compound distribution in IMMSB, one has (it is the
+gibbs sambling equations of IMMSB). : 
+
+\begin{align}
+    p(y_{ij,k}=1 | Y_i^{-ij}, \M_g) = \frac{n+ \lambda_1}{c_k + \lambda_1 + \lambda_0}\\
+    p(y_{ij,k}=0 | Y_i^{-ij}, \M_g) = \frac{c_k - n + \lambda_0}{c_k + \lambda_1 + \lambda_0}
+\end{align}
+
+By plugin those identities in equation \eqref{eq:bb1}, it reduces to :
+\begin{equation} \label{eq:bb2}
+    \frac{P(d_{ik} = n+1)}{P(d_{ik} = n)} = \frac{\left(c_k - n\right) \left(\lambda_1
+    + n\right)}{\left(n + 1\right) \left(c_k + \lambda_0 - n\right)}
 \end{equation}
 
-By solviing the second order equation, one can find that burstiness is satisfy iif the two condition are true : 
-\begin{itemize}
-\item $ \lambda_1 < \frac{c_k-1}{c_k+1}$
-\item $ n < \frac{-3a + \sqrt{a(4c_k(a-b)+5a-4b)}}{2a}$
-\end{itemize}
-with $a = 1/(\lambda_1+\lambda_0)$ and $\lambda_1 / (\lambda_0+\lambda_0)$.
+
+One need to evaluate the sign of the derivative of equation \eqref{eq:bb2}, thus one has :
+
+\begin{align}
+    &\frac{P(d_{ik} = n+2)}{P(d_{ik} = n+1)} - \frac{P(d_{ik} = n+1)}{P(d_{ik} = n)}
+    = \frac{\left(c_k - n - 1\right) \left(\lambda_1 + n + 1\right)}{\left(n + 2\right) \left(c_k
+    + \lambda_0 - n - 1\right)} - \frac{\left(c_k - n\right) \left(\lambda_1
+    + n\right)}{\left(n + 1\right) \left(c_k + \lambda_0 - n\right)} \\
+    &= \frac{ \left(n + 1\right) \left(- c_k + n + 1\right) \left(c_k
+    + \lambda_0 - n\right) \left(\lambda_1 + n + 1\right) - \left(c_k - n\right) \left(\lambda_1 + n\right) \left(n + 2\right) \left(c_k
+    + \lambda_0 - n - 1\right)}{\left(n + 1\right) \left(n
+    + 2\right) \left(c_k + \lambda_0 - n\right) \left(c_k + \lambda_0 - n - 1\right)} \\
+    &= \frac{n^2(1-(\lambda_1+\lambda_0))+n(2c_k(\lambda_1-1)-3\lambda_0-\lambda_1+1)+c_k^2(1-\lambda_1)+c_k(\lambda_1+\lambda_0-\lambda_1\lambda_0-1)-\lambda_1\lambda_0-\lambda_0}{\left(n + 1\right) \left(n + 2\right) \left(c_k + \lambda_0 - n\right) \left(c_k + \lambda_0 - n - 1\right)}
+\end{align}
+
+We know that $n < c_k -2$, thus the denominator is always positive. If $n >> 0$, the
+burstiness is satisfy if $\lambda_0+\lambda_1 < 0$, otherwise it depends on the values of
+the zeros of the polynomial. The solution of the zeros of the numerator are given by the following equations : 
+
+\begin{multline} \label{eq:sqrt1}
+n_{1/2} =  \frac{1}{2 \left(\lambda_1 + \lambda_0 - 1\right)} \biggl(2 c_k \lambda_1
+    - 2 c_k - \lambda_1 - 3 \lambda_0 \pm \\
+\sqrt{- 4 c_k^{2} \lambda_1 \lambda_0 + 4 c_k^{2} \lambda_0 - 4 c_k \lambda_1^{2}
+    \lambda_0 - 4 c_k \lambda_1 \lambda_0^{2} + 4 c_k \lambda_0^{2} + 4 c_k \lambda_0
+    - 4 \lambda_1^{2} \lambda_0 + \lambda_1^{2} - 4 \lambda_1 \lambda_0^{2} + 6 \lambda_1
+    \lambda_0 - 2 \lambda_1 + 5 \lambda_0^{2} - 2 \lambda_0 + 1} + 1\biggr) 
+\end{multline}
+
+In order to obtain a solution not in an imaginary space, one can look for the constraint over
+$c_k$ to obtain positive values in the square root of \eqref{eq:sqrt1}. It can be show
+that the solution of the polynomial in the square root of equation \eqref{eq:sqrt1} are : 
+
+\begin{align}
+    c_{k,1/2} = \frac{1}{2 \lambda_0 \left(\lambda_1 - 1\right)} \left(- \lambda_0 \left(\lambda_1 - 1\right) \left(\lambda_1
+    + \lambda_0 + 1\right) \pm \sqrt{\lambda_0 \left(\lambda_1 - 1\right) \left(\lambda_1 \lambda_0 - \lambda_0 + 1\right)} \left(\lambda_1 + \lambda_0 - 1\right)\right) 
+\end{align}
 
 \end{proof}
 
 
+%%%%%%%%%%%%%%
+%%% Feature Burstiness, Mg
+%%%%%%%%%%%%%%
 \begin{proof}[Proof if proposition \label{th:feature_mg}]
 on paper, to complete.
 \end{proof}
