--- a/Marami/table/preferential_attachment.tex
+++ b/Marami/table/preferential_attachment.tex
@@ -12,7 +12,7 @@ Blogs          & 1 & 1.5 &   1.0 $\pm$ 0.0  &  1.4 $\pm$ 0.03\\
 Manufacturing  & 0 & 1.4 &   0.4 $\pm$ 0.3  &  1.3 $\pm$ 0.05 \\
 \hline
 
-  \ \textbf{\imb} &&&& \\
+  \ \textbf{\immsb} &&&& \\
 \hline
 Network1       & 0.9 & 1.4 &   1.0 \(\pm\) 0.0   &  3.5 \(\pm\) 0.7 \\
 Network2       & 0 & 1.3 &   0.9 \(\pm\) 0.0   &  1.6 \(\pm\) 0.2 \\
@@ -20,7 +20,7 @@ Blogs          & 1 & 1.3 &   1.0 \(\pm\) 0.0   &  4.3 \(\pm\) 1.1 \\
 Manufacturing  & 0 & 1.2 &   0.9 \(\pm\) 0.01  &  1.6 \(\pm\) 0.1 \\
 \hline
 
-  \ \textbf{\ifm} &&&& \\
+  \ \textbf{\ilfm} &&&& \\
 \hline
 Network1      & 1 & 1.4 &   1.0 \(\pm\) 0.0  &  1.7 \(\pm\) 0.1 \\
 Network2      & 0 & 1.2 &   0.0 \(\pm\) 0.0 &  1.2 \(\pm\) 0.0 \\
