--- a/Marami/table/preferential_attachment.tex
+++ b/Marami/table/preferential_attachment.tex
@@ -1,5 +1,5 @@
-
-\begin{table}[h]{Preferential attachment measures for training datasets and networks generated with fitted models.}
+\begin{table}[h]{Evaluation de l'Attachement préférentiel pour les réseaux sources et générés avec les modèles appris.}
+\scalebox{0.7}{
 \begin{tabular}{lrrrr}
   \multirow{2}{*}{\textbf{Training Datasets}}  &
   \multicolumn{2}{c}{Global} & \multicolumn{2}{c}{Local}\\
@@ -28,5 +28,6 @@ Blogs         & 1 & 1.3 &   0.9 \(\pm\) 0.2  &  1.5 \(\pm\) 0.1 \\
 Manufacturing & 0 & 1.2 &   0.3 \(\pm\) 0.3  &  1.3 \(\pm\) 0.0 \\
 \hline
 \end{tabular}
+}
 \label{table:me_gofit}
 \end{table}
