--- a/Marami/table/net_measures.tex
+++ b/Marami/table/net_measures.tex
@@ -1,5 +1,6 @@
 
-\begin{table}[h] {Characteristics of artificial and real networks.}
+\begin{table}[h] {Charactéristiques des réseaux d'apprentissage.}
+\scalebox{0.8}{
     \begin{tabular}{lrrr}
         \hline
         \textbf{Networks} &   nodes &   edges &   density \\
@@ -10,6 +11,7 @@
         Manufacturing &     167 &    5950 &     0.215 \\
     \hline
     \end{tabular}
+}
 	\label{table:networks_measures}
 \end{table}
 
